--- a/views/admin/package/index.ejs
+++ b/views/admin/package/index.ejs
@@ -9,12 +9,12 @@
             <div class="content-header-left col-md-9 col-12 mb-2">
                 <div class="row breadcrumbs-top">
                     <div class="col-12">
-                        <h2 class="content-header-title float-left mb-0">Room</h2>
+                        <h2 class="content-header-title float-left mb-0">Package</h2>
                         <div class="breadcrumb-wrapper">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="/admin/dashboard">Admin</a>
                                 </li>
-                                <li class="breadcrumb-item"><a href="#">Room</a>
+                                <li class="breadcrumb-item"><a href="#">Package</a>
                                 </li>
                                 <li class="breadcrumb-item active">Index
                                 </li>
