--- a/views/admin/ammenity/create.ejs
+++ b/views/admin/ammenity/create.ejs
@@ -39,27 +39,36 @@
                                 <h4 class="card-title">Create New Ammenity</h4>
                             </div>
                             <div class="card-body">
-                                <form action="/admin/ammenity/" method="post">
+                                <form action="/admin/ammenity/" method="post" novalidate class="validated-form">
                                     <div class="row">
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Name</label>
                                                 <input type="text" class="form-control" id="name" name="ammenity[name]"
-                                                    placeholder="Name" />
+                                                    required placeholder="Name" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="quantity">Quantity</label>
-                                                <input type="text" class="form-control" id="quantity"
-                                                    name="ammenity[quantity]" placeholder="Quantity" />
+                                                <input type="number" class="form-control" id="quantity"
+                                                    name="ammenity[quantity]" required placeholder="Quantity" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="price_per_unit">Price Per Unit</label>
                                                 <input type="text" class="form-control" id="price_per_unit"
-                                                    name="ammenity[price_per_unit]" placeholder="Price Per Unit" />
+                                                    name="ammenity[price_per_unit]" required placeholder="Price Per Unit" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
