--- a/views/admin/facility/edit.ejs
+++ b/views/admin/facility/edit.ejs
@@ -34,14 +34,17 @@
                                 <h4 class="card-title">Create New Facility</h4>
                             </div>
                             <div class="card-body">
-                                <form action="/admin/facility/<%= facility._id %>?_method=PUT" method="post">
+                                <form action="/admin/facility/<%= facility._id %>?_method=PUT" method="post"  novalidate class="validated-form">
                                     <div class="row">
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="name">Name</label>
                                                 <input type="text" class="form-control" id="name"
                                                     value="<%= facility.name  %> " name="facility[name]"
-                                                    placeholder="Name" />
+                                                    required placeholder="Name" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -49,7 +52,10 @@
                                                 <label for="duration">Duration</label>
                                                 <input type="text" class="form-control" id="duration"
                                                     value="<%= facility.duration  %> " name="facility[duration]"
-                                                    placeholder="Duration" />
+                                                    required placeholder="Duration" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -57,7 +63,10 @@
                                                 <label for="headcount">Head Count</label>
                                                 <input type="text" class="form-control" id="headcount"
                                                     value="<%= facility.headcount  %> " name="facility[headcount]"
-                                                    placeholder="Head Count" />
+                                                    required placeholder="Head Count" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -65,7 +74,10 @@
                                                 <label for="price">Price</label>
                                                 <input type="text" class="form-control" id="price"
                                                     value="<%= facility.price  %> " name="facility[price]"
-                                                    placeholder="Head Count" />
+                                                    required placeholder="Head Count" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
