--- a/views/admin/dashboard/dashboard.ejs
+++ b/views/admin/dashboard/dashboard.ejs
@@ -7,6 +7,141 @@
     <div class="content-wrapper">
         <div class="content-header row">
         </div>
+        <div class="content-body">
+            <!-- Dashboard Analytics Start -->
+            <section id="dashboard-analytics">
+                <div class="row match-height">
+                    
+                    <!-- Orders Chart Card starts -->
+                    <div class="col-lg-3 col-sm-6 col-12">
+                        <div class="card">
+                            <div class="card-header flex-column align-items-start pb-0">
+                                <div class="avatar bg-light-warning p-50 m-0">
+                                    <div class="avatar-content">
+                                        <i data-feather="package" class="font-medium-5"></i>
+                                    </div>
+                                </div>
+                                <h2 class="font-weight-bolder mt-1"><%= data['rooms_available'].length  %></h2>
+                                <p class="card-text">Rooms Available</p>
+                            </div>
+                            <div id="order-chart"></div>
+                        </div>
+                    </div>
+                    <!-- Orders Chart Card ends -->
+
+                    <!-- Subscribers Chart Card starts -->
+                    <div class="col-lg-3 col-sm-6 col-12">
+                        <div class="card">
+                            <div class="card-header flex-column align-items-start pb-0">
+                                <div class="avatar bg-light-primary p-50 m-0">
+                                    <div class="avatar-content">
+                                        <i data-feather="users" class="font-medium-5"></i>
+                                    </div>
+                                </div>
+                                <h2 class="font-weight-bolder mt-1"><%= data['customers'].length  %> </h2>
+                                <p class="card-text">Booked Customers</p>
+                            </div>
+                            <div id="gained-chart"></div>
+                        </div>
+                    </div>
+                    <!-- Subscribers Chart Card ends -->
+
+                    <!-- Orders Chart Card starts -->
+                    <div class="col-lg-3 col-sm-6 col-12">
+                        <div class="card">
+                            <div class="card-header flex-column align-items-start pb-0">
+                                <div class="avatar bg-light-warning p-50 m-0">
+                                    <div class="avatar-content">
+                                        <i data-feather="package" class="font-medium-5"></i>
+                                    </div>
+                                </div>
+                                <h2 class="font-weight-bolder mt-1"><%= data['rooms_book'].length  %></h2>
+                                <p class="card-text">Booked Rooms</p>
+                            </div>
+                            <div id="order-chart"></div>
+                        </div>
+                    </div>
+                    <!-- Orders Chart Card ends -->
+
+                    <!-- Orders Chart Card starts -->
+                    <div class="col-lg-3 col-sm-6 col-12">
+                        <div class="card">
+                            <div class="card-header flex-column align-items-start pb-0">
+                                <div class="avatar bg-light-warning p-50 m-0">
+                                    <div class="avatar-content">
+                                        <i data-feather="package" class="font-medium-5"></i>
+                                    </div>
+                                </div>
+                                <h2 class="font-weight-bolder mt-1"><%= data['booking'].length  %></h2>
+                                <p class="card-text">Current Bookings</p>
+                            </div>
+                            <div id="order-chart"></div>
+                        </div>
+                    </div>
+                    <!-- Orders Chart Card ends -->
+
+                    
+                </div>
+
+                <div class="row match-height">
+
+                    <!-- Support Tracker Chart Card starts -->
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header d-flex justify-content-between pb-0">
+                                <h4 class="card-title">Customers</h4>
+                                <div class="dropdown chart-dropdown">
+                                    <button class="btn btn-sm border-0 dropdown-toggle p-50" type="button" id="dropdownItem4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <!-- Last 7 Days -->
+                                    </button>
+                                    <!-- <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownItem4">
+                                        <a class="dropdown-item" href="javascript:void(0);">Last 28 Days</a>
+                                        <a class="dropdown-item" href="javascript:void(0);">Last Month</a>
+                                        <a class="dropdown-item" href="javascript:void(0);">Last Year</a>
+                                    </div> -->
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-2 col-12 d-flex flex-column flex-wrap text-center">
+                                        <h1 class="font-large-2 font-weight-bolder mt-2 mb-0"><%= data['total_booking'].length  %> </h1>
+                                        <p class="card-text">Bookings</p>
+                                    </div>
+                                    <div class="col-sm-10 col-12 d-flex justify-content-center">
+                                        <div id="support-trackers-chart"></div>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-between mt-1">
+                                    <div class="text-center">
+                                        <p class="card-text mb-50">Bookings This Month</p>
+                                        <span class="font-large-1 font-weight-bold"><%=  data['thismonth_booking'].length %></span>
+                                    </div>
+                                    <div class="text-center">
+                                        <p class="card-text mb-50">Booking Checked In This Month</p>
+                                        <span class="font-large-1 font-weight-bold"><%=  data['thismonth_booking_current'].length %> </span>
+                                    </div>
+                                    <div class="text-center">
+                                        <p class="card-text mb-50">Checked Out Booking This Month</p>
+                                        <span class="font-large-1 font-weight-bold"><%=  data['thismonth_out_booking'].length %></span>
+                                    </div>
+                                    <div class="text-center">
+                                        <p class="card-text mb-50">Bookingd Checked In</p>
+                                        <span class="font-large-1 font-weight-bold"><%=  data['booking'].length %> </span>
+                                    </div>
+                                    <div class="text-center">
+                                        <p class="card-text mb-50">Checked Out Booking</p>
+                                        <span class="font-large-1 font-weight-bold"><%=  data['out_booking'].length %></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Support Tracker Chart Card ends -->
+                </div>
+            </section>
+            <!-- Dashboard Analytics end -->
+
+        </div>
     </div>
 </div>
 <!-- END: Content-->
